--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .vs/
 examples/Si4737_Example/__vm/
+examples/BasicSi4737_I2CExample/__vm/.BasicSi4737_I2CExample.vsarduino.h
+examples/BasicSi4737_I2CExample/__vm/Compile.vmps.xml
+examples/BasicSi4737_I2CExample/__vm/Configuration.Debug.vmps.xml
+examples/BasicSi4737_I2CExample/__vm/Upload.vmps.xml
