--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ examples/BasicSi4737_I2CExample/__vm/Configuration.Debug.vmps.xml
 examples/BasicSi4737_I2CExample/__vm/Upload.vmps.xml
 examples/BasicSi4737_I2CExample/Debug/BasicSi4.C5F80730.tlog/BasicSi4737_I2CExample.lastbuildstate
 examples/BasicSi4737_I2CExample/Debug/BasicSi4737_I2CExample.log
+*.filters
