--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ examples/BasicSi4737_I2CExample/__vm/Upload.vmps.xml
 examples/BasicSi4737_I2CExample/Debug/BasicSi4.C5F80730.tlog/BasicSi4737_I2CExample.lastbuildstate
 examples/BasicSi4737_I2CExample/Debug/BasicSi4737_I2CExample.log
 *.filters
+examples/BasicSi4737_I2CExample/__vm/Configuration.Release.vmps.xml
