delete unused code, move everything to root

--- a/BasicSi4737_I2CExample.vcxproj
+++ b/BasicSi4737_I2CExample.vcxproj
@@ -45,10 +45,10 @@
       <WarningLevel>EnableAllWarnings</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\Arduino\hardware\arduino\avr\variants\standard;C:\Program Files (x86)\Arduino\libraries\Si4737_i2c\examples\BasicSi4737_I2CExample;X:\Documents\Arduino\libraries\I2C;X:\Documents\Arduino\libraries\I2C\utility;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries;D:\Programs\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\mjch3a1o.00o\Micro Platforms\default\debuggers;X:\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\libraries\Si4737_i2c\examples\Si4737_Example;C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\Arduino\hardware\arduino\avr\variants\standard;C:\Program Files (x86)\Arduino\libraries\Si4737_i2c;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries\SPI;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries\Wire;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries;D:\Programs\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\mjch3a1o.00o\Micro Platforms\default\debuggers;X:\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries\Wire\utility;C:\Program Files (x86)\Arduino\hardware\tools\avr/avr/include/;C:\Program Files (x86)\Arduino\hardware\tools\avr//avr/include/avr/;C:\Program Files (x86)\Arduino\hardware\tools\avr/lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>C:\Program Files (x86)\Arduino\libraries\Si4737_i2c\examples\BasicSi4737_I2CExample\__vm\.BasicSi4737_I2CExample.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <AdditionalIncludeDirectories>C:\Program Files (x86)\Arduino\hardware\arduino\avr\cores\arduino;C:\Program Files (x86)\Arduino\hardware\arduino\avr\variants\standard;C:\Program Files (x86)\Arduino\libraries\Si4737_i2c;X:\Documents\Arduino\libraries\I2C;X:\Documents\Arduino\libraries\I2C\utility;C:\Program Files (x86)\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\arduino\avr\libraries;D:\Programs\Microsoft Visual Studio 14.0\Common7\IDE\Extensions\mjch3a1o.00o\Micro Platforms\default\debuggers;X:\Documents\Arduino\libraries;C:\Program Files (x86)\Arduino\hardware\tools\avr/avr/include/;C:\Program Files (x86)\Arduino\hardware\tools\avr//avr/include/avr/;C:\Program Files (x86)\Arduino\hardware\tools\avr/lib\gcc\avr\4.8.1\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>C:\Program Files (x86)\Arduino\libraries\Si4737_i2c\__vm\.Si4737_i2c.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>true</IgnoreStandardIncludePath>
-      <PreprocessorDefinitions>__AVR_ATmega328p__;__AVR_ATmega328P__;_VMDEBUG=1;F_CPU=16000000L;ARDUINO=165;ARDUINO_AVR_DUEMILANOVE;ARDUINO_ARCH_AVR;__cplusplus;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>__AVR_ATmega328p__;__AVR_ATmega328P__;F_CPU=16000000L;ARDUINO=165;ARDUINO_AVR_DUEMILANOVE;ARDUINO_ARCH_AVR;__cplusplus;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -80,7 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HAL.h" />
-    <ClInclude Include="__vm\.BasicSi4737_I2CExample.vsarduino.h" />
+    <ClInclude Include="__vm\.Si4737_i2c.vsarduino.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HAL.cpp" />
